--- a/gml/readme.org
+++ b/gml/readme.org
@@ -8,22 +8,26 @@ quirks that I don't want to use them for this project.
 
 For Gutenblog v1.0 I chose to use raw, unaltered HTML. This was the
 simplest to implement and offered the most flexibility for publishing
-web pages. However, I think a plain text markup language is more
-ergonomic and the semantic web is a lie anyway.
+web pages but it much less ergonomic than using something like markdown.
 
-Reasons why I am creating my own markup language:
-1. Org-mode is too verbose to write without help from ~emacs~.
-2. Markdown is too abstract and poorly defined.
+So I decided to implement my own markup language that bridges the this
+gap. GML is mostly focused on block-level elements and defers all
+inline-styling to HTML. There are far too many edge-cases around
+translating typographical elements out of plain-text that it's really
+not worth it when HTML is what we want in the end anyway.
 
-Because markdown is such a popular and familiar format, I'm not going
-to deviate from it all that much. Instead I'm going to incorporate a
-few directives for handling blocks and use slashes instead of
-asterisks for italics.
+* Examples
+GML Example:
+#+begin_example
+#+end_example
+
+Output as HTML:
+#+begin_src html
+#+end_src
 
 * GML Grammar (BNF)
 This is the grammar I came up with for brainstorming GML. I hope it's
-relatively complete but I haven't fed it to any parser generators so
-there are probably a few gaps.
+relatively complete but there are probably a few gaps.
 
 #+begin_example
 <document> ::= <metadata> <content> <eof>
@@ -57,8 +61,8 @@ there are probably a few gaps.
 <footnotes> ::= "%footnotes" <eol> <list>
 
 <styled-text> ::= <text>
-                | <style>
                 | <url>
+                | <html>
                 | <footnote>
 
 <list> ::= <list-item> <empty-line>
@@ -68,13 +72,9 @@ there are probably a few gaps.
               | <number> "." <styled-text> <eol>
 
 <footnote> ::= ""
-             | "[" <number> "]"
+             | "[fn:" <number> "]"
 
-<style> ::= "/" <text> "/"
-          | "*" <text> "*"
-          | "`" <text> "`"
-
-<url> ::= "[" <text> "]" (" <text> ")"
+<url> ::= "https://" <text> <space>
 
 <key> ::= "%title"
         | "%subtitle"
@@ -93,100 +93,3 @@ there are probably a few gaps.
 <value> ::= <text>
 <html> ::= <text>
 #+end_example
-
-* Examples
-GML Example:
-#+begin_example
-%title The Gutenblog Markup Language (GML)
-%date 2022-02-15
-
-This is /my/ *markup language* called `GML`.
-
-Did you know that [my favorite website](https://example.com) is just an example?
-
-- Foo[1]
-- Bar[2]
-
-%pre
-func main() {
-    fmt.Println("Hello Gutenblog")
-}
-
-%blockquote
-This is such a great quote.
-
-%figure href="examples/saturn.jpg"
-<img alt="example image" src="examples/saturn-300x300.jpg" />
-Example caption
-
-%figure
-<audio controls src="examples/t-rex-roar.mp3"></audio>
-Listen to the T-Rex
-
-%html
-<details>
-  <summary>Details</summary>
-    Something small enough to escape casual notice.
-</details>
-
-%footnotes
-- [1] Foo
-- [2] Bar
-#+end_example
-
-Output as HTML:
-#+begin_src html
-<article>
-  <header>
-    <h1>The Gutenblog Markup Language (GML)</h1>
-    <time datetime="2022-02-15">February 15, 2022</time>
-  </header>
-
-  <p>
-    This is <em>my</em> <strong>markup language</strong> called <code>GML</code>.
-  </p>
-
-  <p>
-    Did you know that <a href="https://example.com">my favorite website</a> is just an example?
-  </p>
-
-  <ul>
-    <li>Foo<a id="fnr.1" href="#fn.1"><sup>[1]</sup></a></li>
-    <li>Bar<a id="fnr.2" href="#fn.2"><sup>[2]</sup></a></li>
-  </ul>
-
-  <pre>
-func main() {
-    fmt.Println("Hello Gutenblog")
-}
-  </pre>
-
-  <blockquote>
-    This is such a great quote.
-  </blockquote>
-
-  <figure>
-    <a href="examples/saturn.jpg">
-      <img alt="example image" src="examples/saturn-300x300.jpg" />
-    </a>
-    <figcaption>Example caption</figcaption>
-  </figure>
-
-  <figure>
-    <audio controls src="examples/t-rex-roar.mp3"></audio>
-    <figcaption>Listen to the T-Rex</figcaption>
-  </figure>
-
-  <details>
-    <summary>Details</summary>
-      Something small enough to escape casual notice.
-  </details>
-
-  <footer>
-    <ol>
-      <li>Something about Foo. <a class="gml-fnback" href="#fnr.1">⮐</a></li>
-      <li>Something about Bar. <a class="gml-fnback" href="#fnr.2">⮐</a></li>
-    </ol>
-  </footer>
-</article>
-#+end_src
